src/test/deca/context/valid/cast2.deca
{
    float x = 5.6;
    int a = (int) (x);
    if (a==5) {
        print("OK");
    }
}