src/test/deca/context/invalid/castInvalid.deca
class A {

}

{
    int x = 6;
    if (x instanceof A) {
        print("Erreur.");
    }
}
//ERROR :7: